# WeatherApp

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
Source/: cache.cpp  cache.h  consoleprinter.cpp  consoleprinter.h  controller.cpp  controller.h  main.cpp  weatherdata.cpp  weatherdata.h  weatherfetcher.cpp  weatherfetcher.h
